# zksync-eigenda-m1

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  METRICS.md  Makefile  README.md  deny.toml  docker-compose.yml  dockerfile.gpu  init.sql  mise.toml  remappings.txt  rust-toolchain.toml
.github/workflows/: ci.yml  contracts.yml  docker.yml  security.yml
common/: Cargo.toml
common/src/: eigenda_cert.rs  lib.rs  output.rs  polynomial_form.rs  serializable_g1.rs  verify_blob.rs
contracts/: README.md  foundry.toml
contracts/script/: BlobVerifierWrapperDeployer.s.sol  ContractsDeployer.s.sol  DeployRiscZeroGroth16Verifier.s.sol  EigenDARegistryDeployer.s.sol  ProofVerifier.s.sol  ProofVerifierWrapperDeployer.s.sol  Risc0ProofVerifier.s.sol  Risc0ProofVerifierWrapperDeployer.s.sol
contracts/src/: BlobVerifierWrapper.sol  CertAndBlobVerifier.sol  EigenDACertVerifierWrapper.sol  EigenDARegistry.sol  ProofVerifierWrapper.sol  Risc0ProofVerifierWrapper.sol
docs/: docs.md
docs/components-integration/: components-integration.md
docs/proving_service/: proving_service.md
docs/proving_service/groth16-proof-generation/host/: host.md
docs/proving_service/proof-request-receiver/: proof-request-receiver.md
docs/sidecar/: sidecar.md
docs/sidecar/docker-services/: docker-services.md
docs/sidecar/groth16-proof-generation/: groth16-proof-generation.md
docs/sidecar/groth16-proof-generation/guest/: guest.md
docs/sidecar/groth16-proof-generation/host/: host.md
docs/sidecar/metrics-endpoints/: metrics.md
docs/sidecar/proof-generator/: proof-generator.md
docs/sidecar/proof-request-receiver/: proof-request-receiver.md
docs/zksync-contracts/: contracts.md
docs/zksync-era/: sequencer.md
grafana/dashboards/: sample-dashboard.json
host/: Cargo.toml
host/src/: blob_id.rs  blob_info.rs  db.rs  eigen_client.rs  guest_caller.rs  inclusion_data.rs  lib.rs  main.rs  proof_equivalence.rs  prove_risc0.rs  utils.rs  verify_blob.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: blob_info.rs  lib.rs  main.rs  verify_blob.rs
prometheus/: prometheus.yml
proof-equivalence-methods/: Cargo.toml
proof-equivalence-methods/guest/: Cargo.toml
proof-equivalence-methods/guest/src/: main.rs
proof-equivalence-test/: Cargo.toml  sample_data.txt
proof-equivalence-test/src/: main.rs
verifierWrapper/: Cargo.toml  Deployer.s.sol  VerifierWrapper.sol
verifierWrapper/deployer/script/: Deployer.s.sol
verifierWrapper/src/: main.rs
