[workspace]
resolver = "2"
members = ["host", "blob-verification-methods", "proof-equivalence-methods"]

[workspace.dependencies]
# Intra-workspace dependencies
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-1.3" }

# risc0 monorepo dependencies.
risc0-build = { version = "1.2.0" }
risc0-zkvm = { version = "1.2.0", default-features = false}
risc0-zkp = { version = "1.2.0", default-features = false}

alloy-primitives = { version = "0.8" }
alloy-sol-types = { version = "0.8" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
blob-verification-methods = { path = "blob-verification-methods" }
proof-equivalence-methods = { path = "proof-equivalence-methods" }
tokio = { version = "1.39", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5" }
tokio-postgres = { version = "0.7", features=["with-chrono-0_4"] }  
ethabi = "18.0.0"
serde = "1.0"
hex = "0.4"
chrono = "0.4"
serde_json = "1.0"
rust-kzg-bn254-prover = { git = "https://github.com/Layr-Labs/rust-kzg-bn254.git", branch = "master"}
ark-serialize = "0.5"
tonic = { version = "0.12.1", features = ["tls", "channel", "tls-roots"]}
kzgpad-rs = { git = "https://github.com/Layr-Labs/kzgpad-rs.git", tag = "v0.1.0" }
ark-bn254 = "0.5"
num-bigint = "0.4.6"
rust-kzg-bn254-primitives = { git = "https://github.com/Layr-Labs/rust-kzg-bn254.git", branch = "master"}
prost = "0.13.1"


# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
