[workspace]
resolver = "2"
members = ["host", "common", "methods"]

[workspace.dependencies]
# Intra-workspace dependencies
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-2.2" }

# risc0 monorepo dependencies.
risc0-build = { version = "2.1" }
risc0-zkvm = { version = "2.1"}
risc0-zkp = { version = "2.0", default-features = false }

alloy-primitives = { version = "1.0" }
alloy-sol-types = { version = "1.0" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
methods = { path = "methods" }
tokio = { version = "1.39", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5" }
ethabi = "18.0.0"
serde = "1.0"
hex = "0.4"
chrono = "0.4"
rust-kzg-bn254-prover = "0.1.1"
rust-kzg-bn254-primitives = "0.1.1"
ark-serialize = "0.5"
tonic = { version = "0.12.1", features = ["tls", "channel", "tls-roots"] }
ark-bn254 = "0.5"
num-bigint = "0.4.6"
prost = "0.13.1"
common = { path = "common" }
secrecy = "0.8.0"
alloy = "1.0"
ark-ff = "0.5"
rust-eigenda-v2-client = {git = "https://github.com/lambdaclass/eigenda-client-rs", branch="use_alloy_1.0"}
rust-eigenda-v2-common = "0.1.2"
rust-eigenda-signers = "0.1.6"
async-trait = "0.1"
reqwest = "0.12"
serde_json = "1.0"
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "macros"] }
tracing = "0.1"
prometheus = "0.14.0"
lazy_static = "1.5.0"
tiny_http = "0.12"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
