[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[dependencies]
serde = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
rust-kzg-bn254-primitives = { workspace = true }
rust-eigenda-v2-common = { workspace = true }
clap = { workspace = true }
ethabi = { workspace = true }
