[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
methods = { workspace = true }
risc0-steel = { workspace = true, features = ["host"] }
risc0-zkvm = { workspace = true, features = ["client", "cuda"] }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
tokio-postgres = { workspace = true }
ethabi = { workspace = true }
hex = {workspace = true}
chrono = {workspace = true}
rust-kzg-bn254-prover = { workspace = true }
ark-bn254 = {workspace = true}
num-bigint = {workspace = true}
rust-kzg-bn254-primitives = {workspace = true}
tonic = {workspace = true}
kzgpad-rs = {workspace = true}
prost = {workspace = true}
common = {workspace = true}
secrecy = {workspace = true}
alloy = {workspace = true}
rust-eigenda-client = {workspace = true}
async-trait = { workspace = true }
