[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
blob-verification-methods = { workspace = true }
risc0-steel = { workspace = true, features = ["host"] }
risc0-zkvm = { workspace = true, features = ["client", "cuda"] }
tokio = { workspace = true, features = ["time"] }
tracing-subscriber = { workspace = true }
url = { workspace = true }
ethabi = { workspace = true }
hex = {workspace = true}
chrono = {workspace = true}
serde_json = {workspace = true}
common = {workspace = true}
secrecy = {workspace = true}
alloy = {workspace = true}
reqwest = {workspace = true}
